# dataset_pr-cs

./: .gitmodules  README.md
CS_dataset/autumn/cs-2023-3344/: README.md
CS_dataset/autumn/cs-2023-3381/: README.md
CS_dataset/autumn/cs-2023-3382/: README.md
CS_dataset/autumn/cs-2023-3383/: README.md
CS_dataset/autumn/cs-2023-3384/: README.md
CS_dataset/autumn/cs-2023-3385/: README.md
CS_dataset/autumn/cs-2023-3388/: README.md
CS_dataset/cs-2023-3341/: README.md
CS_dataset/cs-2023-3341/Bayram_Esra_lb2/: Bayram_Esra_lb2.docx
CS_dataset/cs-2023-3341/Boitsov_Vladislav_lb2/: Boitsov_Vladislav_lb2.docx
CS_dataset/cs-2023-3341/Che_Maksim_lb2/: Che_Maksim_lb2.docx
CS_dataset/cs-2023-3341/Chinaeva_Margarita_lb2/: Chinaeva_Margarita_lb2.docx
CS_dataset/cs-2023-3341/Grebenyuk_Vadim_lb1/: Grebenyuk_Vadim_lb1.docx
CS_dataset/cs-2023-3341/Grebenyuk_Vadim_lb2/: Grebenyuk_Vadim_lb2.docx
CS_dataset/cs-2023-3341/Kostromitin_Mikhail_lb1/: Kostromitin_Mikhail_lb1.docx
CS_dataset/cs-2023-3341/Kostromitin_Mikhail_lb2/: Kostromitin_Mikhail_lb2.docx
CS_dataset/cs-2023-3341/Kudin_Aleksandr_lb1/: Kudin_Aleksandr_lb1.docx
CS_dataset/cs-2023-3341/Kuznetsova_Svetlana_lb1/: Kuznetsova_Svetlana_lb1.docx
CS_dataset/cs-2023-3342/: README.md
CS_dataset/cs-2023-3343/: README.md
CS_dataset/cs-2024-3343/: README.md
PR_dataset/spring/pr-2024-3381/Gerasimov_Dmitrii_cw/src/: CMakeLists.txt  Makefile  main.cpp
PR_dataset/spring/pr-2024-3381/Gerasimov_Dmitrii_cw/src/include/: Circle.hpp  Color.hpp  Drawable.hpp  ImageReader.hpp  ImageRedactor.hpp  Line.hpp  PngReader.hpp  Rectangle.hpp  Shape.hpp  Vector2i.hpp
PR_dataset/spring/pr-2024-3381/Gerasimov_Dmitrii_cw/src/lib/: Circle.cpp  ImageRedactor.cpp  Line.cpp  PngReader.cpp  Rectangle.cpp
PR_dataset/spring/pr-2024-3381/Komarov_Daniil_cw/src/: CMakeLists.txt  Makefile  main.c
PR_dataset/spring/pr-2024-3381/Komarov_Daniil_cw/src/include/: argdict.h  argparse.h  coord_queue.h  drawing.h  errors.h  image.h  pngfile.h  set.h  tasks.h
PR_dataset/spring/pr-2024-3381/Komarov_Daniil_cw/src/lib/: argdict.c  argparse.c  coord_queue.c  drawing.c  errors.c  image.c  pngfile.c  set.c  tasks.c
(+8632 files in other folders)
